k0s/deployment-job.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chainfetch-jobs
  namespace: chainfetch
  labels:
    app: chainfetch-jobs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chainfetch-jobs
  template:
    metadata:
      labels:
        app: chainfetch-jobs
    spec:
      imagePullSecrets:
        - name: ghcr-cred
      containers:
        - name: jobs
          image: ghcr.io/chainfetch/chainfetch:latest
          imagePullPolicy: Always
          command: ["./bin/jobs"]
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "1000m"
              memory: "1536Mi"
              ephemeral-storage: "1Gi"
          securityContext:
            capabilities:
              drop:
                - NET_RAW
