k0s/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: chainfetch
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: pgvector/pgvector:pg17
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
          securityContext:
            capabilities:
              drop:
                - NET_RAW
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: postgres-data-longhorn
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: chainfetch
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
