k0s/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chainfetch-web
  namespace: chainfetch
  labels:
    app: chainfetch-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chainfetch-web
  template:
    metadata:
      labels:
        app: chainfetch-web
    spec:
      imagePullSecrets:
        - name: ghcr-cred
      containers:
        - name: web
          image: ghcr.io/chainfetch/chainfetch:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /up
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /up
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 30
          resources:
            requests:
              cpu: "750m"
              memory: "1Gi"
              ephemeral-storage: "1.5Gi"
            limits:
              cpu: "1000m"
              memory: "1.5Gi"
              ephemeral-storage: "1.5Gi"
          securityContext:
            capabilities:
              drop:
                - NET_RAW
---
apiVersion: v1
kind: Service
metadata:
  name: chainfetch-web
  namespace: chainfetch
  labels:
    app: chainfetch-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: chainfetch-web
